[2단계 - 로또 리팩토링] 밍트(김명지) 미션 제출합니다. (#631)
* refactor(LottoController): 변수 인라인으로 수정

* refactor(LottoController): 상수 접근제어자 변경

- 클래스 내부에서만 사용되는 변수는 접근제어자를 private으로 설정한다.

* refactor(WinningResult): getter 위치 수정 및 방어적 복사 수행

- getter를 java 권장 메서드 순서에 따라 맨 아래에 둔다.
- 외부에서 내부 맵을 변경하는 것을 막기 위해 방어적 복사를 수행하여 반환한다.

* refactor(WinningResultCalculator): 호출되는 순서에 따라 메서드 순서 변경

* refactor(All): 메서드, 변수명 수정 및 중복 메서드 제거

* refactor(LottoController): 메서드 추출

* refactor(All): 변수에 final 키워드 추가

- 코드의 예측 가능성을 높이고 스레드 안전, 성능 상의 이점으로 인해 final 키워드를 붙인다.

* refactor(Lotto): 메서드 추출

* fix(OutputView): 당첨 통계 출력시 2등의 경우 보너스 볼 일치 메세지도 출력하도록 수정

* refactor(RandomLottoGenerator): 클래스명 수정 및 메서드 수정

- 로또 번호를 랜덤으로 추출하여 로또를 생성하기 때문에 클래스명에 Random을 추가한다.

* test(LottoNumber): 테스트 케이스 추가 및 누락된 final 키워드 추가

* refactor(Lotto): 메서드, 상수 위치 변경

- 메서드를 public -> protected -> default -> private 순으로 정렬한다. (equals, getter/setter는 뒤에 위치)
- 로또 크기는 로또 데이터와 관련된 상수이므로 Lotto 클래스로 위치를 옮긴다.

* feat(LottoNumber): 캐싱 도입하여 객체 재사용

- LottoNumber는 불변 객체이고, 1~45 범위의 숫자가 매번 생성되므로 캐싱을 도입하여 메모리를 절약한다.

* refactor(RandomLottoGenerator): Stream 사용하도록 변경

- Stream을 이용하여 가독성을 향상한다.

* refactor(LottoPrice): 빠진 테스트 추가

* test(Lotto): 빠진 테스트 추가

* refactor(WinningResult): 메서드명 명확하게 수정

* refactor(LottoController): 메서드명 변경

* refactor(InputValidator): InputValidator 클래스 view 패키지로 이동

- InputValidator는 InputView에서만 사용되므로 util 패키지에 둘만큼 범용적이지 않다.

* test(InputValidator, StringParser): 정상 케이스 테스트 추가

* test(LottoNumber, LottoPrice): 테스트 메서드명 변경

* test(LottoPrice, StringParser): given절에 테스트에 필요한 데이터 명시하도록 수정

* test(LottoPrice): 검증 정상적으로 수행되도록 수정

* test(WinningResultCalculator): given절에 테스트 기대 결과도 포함하도록 수정

- given절에는 테스트에 필요한 모든 데이터(전제 조건, 기대 결과 등등)를 포함하도록 한다.

* refactor(Lotto): 내부 필드 자료구조를 List에서 Set으로 변경

- 로또 번호는 중복되지 않은 6개의 숫자여야하므로 Set을 이용하면 중복 여부를 요소의 개수로 간편하게 확인할 수 있다.

* test(StringParser): 필요없는 테스트 설명 제거

* fix(RandomLottoGenerator): 로또 생성 개수가 양수가 아닌 경우 예외 발생하도록 수정

* feat(LottoGenerator): LottoGenerator 인터페이스를 의존하도록 하여 DIP 지